# Audio-Emotion-Analysis

./: .env.example  .gitignore  AGENTS.md  README.md  demo1.py  demo2.py  demo_asr_analysis.py  demo_asr_llm_tts.py  demo_emollm.py  demo_example.py  demo_full_voice_pipeline.py  demo_tts.py  downloadmodels.py  downmodel.py  main.py  pyproject.toml
audio_emotion/: __init__.py  api_voice_companion.py  emollm_service.py  inference.py  load.py  qwen_audio_service.py  tts_service.py
audio_emotion/load_models/: download_model.py  load.py
audio_emotion/qwen_tts/: README.md  __init__.py
audio_emotion/qwen_tts/core/: __init__.py
audio_emotion/qwen_tts/core/models/: modeling_qwen3_tts.py
audio_emotion/qwen_tts/core/tokenizer_12hz/: modeling_qwen3_tts_tokenizer_v2.py
audio_emotion/qwen_tts/inference/: qwen3_tts_tokenizer.py
audio_emotion/utils/: audio_asr_analysis.py  audio_tts.py  emotion_llm_reply.py  output_path.py
